# My-Archive

./: .gitignore  README.md
Thesis/: accuracy.xlsx  tdnn_2x1_2x2_revise.vsd
Thesis/Bachelor/: paper.docx  presentation.pptx
Thesis/date/: paper_2.docx  tdnn_2x1_2x2.vsd
Thesis/date/outputs/: CIFAR10 Simulation Result.docx
Thesis/master/: pad_sim.py  plan.hwp  study_padding_0711.pptx
career/development/conv2d/: conv2d.c
career/uvm/: makefile  run.py
career/uvm/template/: agent.sv  c_func.c  config.sv  driver.sv  env.sv  makefile  model.v  model_wrapper.sv  monitor.sv  params_undef.svh  pkg.vinc  scoreboard.sv  sequence.sv  top.sv  vif.sv  vseq.sv
career/uvm/templete/: agent.sv  driver.sv  monitor.sv  params_def.svh  scoreboard.sv  sequence.sv  sequencer.sv  vif.sv
career/uvm/test_bench/: clock_reset.vinc
opencv/: auto-install-linux.sh
opencv/Calibrate-Camera/: 3D Computer Vision.docx
opencv/Calibrate-Camera/src/: main.cpp
opencv/python/: cam_set.py
opencv/term-project/src/: CMakeLists.txt  main.cpp
opencv/webcam/CLAHE/: main.cpp
project/opencv-paper-imple/src/: term_util.cpp  term_util.hpp
project/rtl/PE/: controller.v  filter2d.v  half_adder_structural.v  image_filter.v  metronome.v  metronome_signed.v  muliplier.v  pool.v  ram.tcl  row_filter.v  signed_multiplier.v  test_adder.v  test_metronome.v  test_pe_systolic.v  top.v
project/rtl/cam2vga/: RGB565ReceiveSync.v
rtl/PE/: filter_top.v  full_adder_structural.v  metronome.v  muliplier.v  n_bit_adder.v  pe_systolic.v
rtl/cam2vga/: CameraSetup.v  OV7670Init.v  camera_module.v  hsync.v  math.v  top.v
rtl/hls/fir-filter/: fir.hpp
school/opencv/c++/Calibrate-Camera/src/: CMakeLists.txt
school/seminar/: Tensorflow on ARMv7.pptx
(+58 files in other folders)
